# my_agent

./: .gitignore  .gitmodules  BENCHMARKER_PLAN.md  CLAUDE.md  Makefile  PHASE4_TESTS.md  PHASE9_TESTING_GUIDE.md  PHASE9_TESTING_SUMMARY.md  PLAN.md  README.md  TASK_CHAIN_TERMINAL_FIX.md  TERMINAL_IMPLEMENTATION_SUMMARY.md  task_meta_4ea18476bf47.json  task_meta_670be485f9a4.json  task_meta_70bc9617989a.json  task_meta_9b41de3afac1.json  task_meta_b0c7cd0ec1e7.json  task_meta_d66395a02e8e.json
.github/workflows/: build-images.yml  test.yml
agent/: .coverage  .dockerignore  .env.example  .env.production.example  .gitignore  Makefile  alembic.ini  cli.py  docker-compose.prod.yml  docker-compose.yml  pytest.ini
agent/alembic/: env.py
agent/core/: Dockerfile  __init__.py  health_monitor.py  (+3 more)
agent/shared/: pyproject.toml
agent/shared/shared/: __init__.py  auth.py  config.py  credential_store.py  database.py  error_capture.py  file_utils.py  llm_settings_resolver.py  oauth_refresh.py  redis.py
agent/shared/shared/models/: __init__.py  conversation.py  crew_context_entry.py  crew_member.py  crew_session.py  error_log.py  file.py  location_reminder.py  memory.py  named_place.py  owntracks_credential.py  persona.py  project.py  project_phase.py  project_skill.py  project_task.py  scheduled_job.py  scheduled_workflow.py  slack_installation.py  task_skill.py  token_usage.py  user.py  user_credential.py  user_location.py  user_skill.py
agent/shared/shared/schemas/: __init__.py  common.py  messages.py  notifications.py  tools.py
agent/shared/shared/utils/: tokens.py
(+418 files in other folders)
