[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis>=5.0",
    "httpx>=0.26",
    "structlog>=24.1",
    "tiktoken>=0.5",
    "cryptography>=42.0",
    "fastapi>=0.109",
]

[tool.setuptools.packages.find]
include = ["shared*"]
